# ElfExcavator

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  .gitmodules  BinUtils.cxx  BinUtils.hxx  BinUtilsDialog.cxx  BinUtilsDialog.hxx  BinUtilsDialog.ui  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  CircularIterator.hxx  DisassemblyHighlighter.cxx  DisassemblyHighlighter.hxx  FilterHeaderView.cxx  FilterHeaderView.hxx  FindLineEdit.cxx  FindLineEdit.hxx  HexNumberDelegate.cxx  HexNumberDelegate.hxx  MainWindow.cxx  MainWindow.hxx  MainWindow.ui  MakeQChild.hxx  MaxStore.hxx  MultiFilterProxyModel.cxx  MultiFilterProxyModel.hxx  Palette.cxx  Palette.hxx  PieChart.cxx  PieChart.hxx  README.md  SectionHeader.cxx  SectionHeader.hxx  SectionHeaderItemModel.cxx  SectionHeaderItemModel.hxx  SectionHeaderParser.cxx  SectionHeaderParser.hxx  (+9 more)
data/: Resources.qrc
data/i18n/: elfexcavator.de_DE.ts
data/share/applications/: elfexcavator.desktop
src/: CMakeLists.txt  main.cpp
src/model/: ByteConversion.cpp  ByteConversion.hpp  ElfFile.cpp  ElfFile.hpp  TextFilter.cpp  TextFilter.hpp
src/presenter/: MainPresenter.cpp  MainPresenter.hpp  MultiFilterProxyModel.cpp  MultiFilterProxyModel.hpp  SectionHeaderItemModel.cpp  SectionHeaderItemModel.hpp  SettingsPresenter.cpp  SettingsPresenter.hpp  SymbolTableItemModel.cpp  SymbolTableItemModel.hpp
src/view/: CxxDisassemblyHighlighter.cpp  CxxDisassemblyHighlighter.hpp  HexNumberDelegate.cpp  HexNumberDelegate.hpp  HexView.cpp  HexView.hpp  HexView.ui  LogHighlighter.cpp  LogHighlighter.hpp  MainWindow.cpp  MainWindow.hpp  MainWindow.ui  MultiFilterHeaderView.cpp  MultiFilterHeaderView.hpp  MultiFilterTableView.cpp  MultiFilterTableView.hpp  PieChartForm.cpp  PieChartForm.hpp  PieChartForm.ui  SettingsForm.cpp  SettingsForm.hpp  SettingsForm.ui
test/: ByteConversion.test.cpp  CMakeLists.txt  Tests.cpp
tests/: ByteConversion.test.cpp  CMakeLists.txt  FilterExpressionEvaluator.test.cpp
tools/cmake/modules/: FindDeployQt5.cmake  ccache.cmake  deb.cmake  installation.cmake  rpath.cmake  sanitizer.cmake  translations.cmake  variables.cmake  warnings.cmake
tools/cmake/modules/data/i18n/: elfexcavator.de_DE.ts  elfexcavator.en_US.ts
tools/docker/: Dockerfile
tools/scripts/: get-deb-deps.sh  setup.sh
